<resources>
    <string name="app_name">No Worries</string>
    <string name="start">START</string>
    <string name="greeting">"How's your day?"</string>
    <string name="great">GREAT</string>
    <string name="fine">FINE</string>
    <string name="not_great">NOT GREAT</string>
    <string name="bad">BAD</string>
    <string name="awful">Awful</string>
    <string name="today">Today was…</string>
    <string name="badday">Bad days</string>
    <string name="greatday">Great days</string>
    <string name="awfulday">Awful days</string>
    <string name="notgreatday">Not greats</string>
    <string name="finedays">Fine days</string>
    <string name="rhome">RelaxHomeButton</string>
    <string name="chome">CalendarHomeButton</string>
    <string name="bhome">BreathHomeButton</string>
</resources>
